force-app/main/default/objects/Case/fields/AM_Escalado__c.field-meta.xml
<CustomField>
    <fullName>AM_Escalado__c</fullName>
    <label>Escalado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBK</fullName>
            </value>
            <value>
                <fullName>CECA</fullName>
            </value>
            <value>
                <fullName>NTTDATA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>