force-app/main/default/objects/Case/fields/AM_Fecha_ultima_toma_propiedad__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_ultima_toma_propiedad__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha última toma propiedad</label>
    <type>DateTime</type>
</CustomField>