force-app/main/default/objects/Case/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <formula>IF(ISBLANK(App_Reviews__r.App_Image__c),&quot;&quot;,IMAGE(App_Reviews__r.App_Image__c , App_Reviews__r.App__c ,30,30) + &quot; &quot;) + App_Reviews__r.App__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>App</label>
    <type>Text</type>
</CustomField>