force-app/main/default/objects/Case/fields/App_Reviews__c.field-meta.xml
<CustomField>
    <fullName>App_Reviews__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App Reviews</label>
    <referenceTo>CC_ST_AppReviews__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>