force-app/main/default/objects/Case/fields/AV_ShowCaseRecord__c.field-meta.xml
<CustomField>
    <fullName>AV_ShowCaseRecord__c</fullName>
    <description>Hace que el campo numero de caso sea clickable y te de mas detalles del caso</description>
    <formula>IF( !ISBLANK( CaseNumber ) ,  HYPERLINK(&quot;/lightning/r/Case/&quot;+ Id +&quot;/view&quot;, CaseNumber , &quot;_self&quot;) , HYPERLINK(&quot;/lightning/r/Case/&quot;+ Id +&quot;/view&quot;,&quot;-&quot;, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ver Registro Caso</label>
    <type>Text</type>
</CustomField>