force-app/main/default/objects/Case/fields/Canal_del_Empleado__c.field-meta.xml
<CustomField>
    <fullName>Canal_del_Empleado__c</fullName>
    <label>Canal del empleado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>900</fullName>
            </value>
            <value>
                <fullName>Agente</fullName>
            </value>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
            <value>
                <fullName>SSCC</fullName>
            </value>
            <value>
                <fullName>W10</fullName>
            </value>
            <value>
                <fullName>AdC</fullName>
            </value>
            <value>
                <fullName>Despliegues</fullName>
            </value>
            <value>
                <fullName>CSI</fullName>
            </value>
            <value>
                <fullName>Despliegues2</fullName>
            </value>
            <value>
                <fullName>902_CCO</fullName>
            </value>
            <value>
                <fullName>EME</fullName>
                <isActive>false</isActive>
                <label>EME</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>