force-app/main/default/objects/Case/fields/CBK_Case_Extension_Id__c.field-meta.xml
<CustomField>
    <fullName>CBK_Case_Extension_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Field to Case Extension object</description>
    <label>Case Extension Id</label>
    <referenceTo>CBK_Case_Extension__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>