force-app/main/default/objects/Case/fields/CBK_Traslado_Remitido__c.field-meta.xml
<CustomField>
    <fullName>CBK_Traslado_Remitido__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trasladar/Remitir</label>
    <length>10</length>
    <type>Text</type>
</CustomField>