force-app/main/default/objects/Case/fields/CC_24_Horas__c.field-meta.xml
<CustomField>
    <fullName>CC_24_Horas__c</fullName>
    <description>Campo utilizado para el report FCO -SLA</description>
    <formula>IF(((DATETIMEVALUE(ClosedDate) - DATETIMEVALUE(MID(CC_FechasSLA__c, 21, 19)))) &lt; 0, 1 , NULL)</formula>
    <label>&lt;24 Horas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>