force-app/main/default/objects/Case/fields/CC_Acepta_Condiciones_Contractuales__c.field-meta.xml
<CustomField>
    <fullName>CC_Acepta_Condiciones_Contractuales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acepta Condiciones Contractuales</label>
    <type>Checkbox</type>
</CustomField>