force-app/main/default/objects/Case/fields/CC_Activacion_OK__c.field-meta.xml
<CustomField>
    <fullName>CC_Activacion_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activación OK</label>
    <type>Checkbox</type>
</CustomField>