force-app/main/default/objects/Case/fields/CC_AcuseDelay__c.field-meta.xml
<CustomField>
    <fullName>CC_AcuseDelay__c</fullName>
    <description>Tiempo de delay para el envío del acuse de recibo</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tiempo de delay para el envío del acuse de recibo</inlineHelpText>
    <label>Acuse Delay (Interno)</label>
    <type>DateTime</type>
</CustomField>