force-app/main/default/objects/Case/fields/CC_AcuseRecibo__c.field-meta.xml
<CustomField>
    <fullName>CC_AcuseRecibo__c</fullName>
    <description>Indicador del estado de envío del acuse de recibo</description>
    <inlineHelpText>Indicador del estado de envío del acuse de recibo</inlineHelpText>
    <label>Acuse recibo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_EstadoEnvioNotif</valueSetName>
    </valueSet>
</CustomField>