force-app/main/default/objects/Case/fields/CC_Admin__c.field-meta.xml
<CustomField>
    <fullName>CC_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check que hace bypass a las validation rules que lo tengan en cuenta.</description>
    <label>CC_Admin</label>
    <type>Checkbox</type>
</CustomField>