force-app/main/default/objects/Case/fields/CC_Agrupador_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Agrupador_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agrupador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Agrupador__c.CC_Publica__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>CC_Agrupador__c.CC_Estado__c</field>
            <operation>equals</operation>
            <value>Activo</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CC_Agrupador__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>