force-app/main/default/objects/Case/fields/CC_Agrupador_Padre_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>CC_Agrupador_Padre_Id_Formula__c</fullName>
    <formula>CC_Agrupador_Id__r.CC_Agrupador_Padre_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agrupador padre</label>
    <type>Text</type>
</CustomField>