force-app/main/default/objects/Case/fields/CC_Aqumetrix__c.field-meta.xml
<CustomField>
    <fullName>CC_Aqumetrix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aqmetrix</label>
    <type>Checkbox</type>
</CustomField>