force-app/main/default/objects/Case/fields/CC_Area_Negocio__c.field-meta.xml
<CustomField>
    <fullName>CC_Area_Negocio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Área de Negocio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>