force-app/main/default/objects/Case/fields/CC_Asunto__c.field-meta.xml
<CustomField>
    <fullName>CC_Asunto__c</fullName>
    <description>Se crea para proyectos relacionados a GENiaL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Asunto</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>