force-app/main/default/objects/Case/fields/CC_Buzon_Salida__c.field-meta.xml
<CustomField>
    <fullName>CC_Buzon_Salida__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buzón de salida (interno)</label>
    <type>Email</type>
</CustomField>