force-app/main/default/objects/Case/fields/CC_Cambio_Estado_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>CC_Cambio_Estado_Pendiente__c</fullName>
    <description>Campo que muestra la fecha en la que se cambió el estado del caso a pendiente.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cambio a estado pendiente</label>
    <type>Date</type>
</CustomField>