force-app/main/default/objects/Case/fields/CC_Cambio_Estado_Pendiente_Externo__c.field-meta.xml
<CustomField>
    <fullName>CC_Cambio_Estado_Pendiente_Externo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAMPO DEPRECADO.</description>
    <label>Deseo cambiar a estado Pdte. Colaborador</label>
    <type>Checkbox</type>
</CustomField>