force-app/main/default/objects/Case/fields/CC_Campana__c.field-meta.xml
<CustomField>
    <fullName>CC_Campana__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Caracteristica__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Campaña</value>
        </filterItems>
        <filterItems>
            <field>CC_Caracteristica__c.CC_Activo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CC_Caracteristica__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos_Campana</relationshipName>
    <type>Lookup</type>
</CustomField>