force-app/main/default/objects/Case/fields/CC_Canal_Contacto__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_Contacto__c</fullName>
    <label>Canal contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>FRA_Call Center</fullName>
                <label>Call Center</label>
            </value>
            <value>
                <fullName>FRA_Cliente cbk</fullName>
                <label>Cliente cbk</label>
            </value>
            <value>
                <fullName>FRA_Oficina</fullName>
                <label>Oficina</label>
            </value>
            <value>
                <fullName>FRA_Cliente Consumer</fullName>
                <label>Cliente Consumer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>