force-app/main/default/objects/Case/fields/CC_Canal_Operativo__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_Operativo__c</fullName>
    <description>Campo para indicar el canal donde se haya el problema.</description>
    <label>Canal operativo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>App CaixaBankPay</fullName>
            </value>
            <value>
                <fullName>App CaixaBankSign</fullName>
            </value>
            <value>
                <fullName>App CBKNow</fullName>
            </value>
            <value>
                <fullName>App Imagin</fullName>
            </value>
            <value>
                <fullName>App imaginKids</fullName>
                <isActive>false</isActive>
                <label>App imaginKids</label>
            </value>
            <value>
                <fullName>App imaginTeens</fullName>
            </value>
            <value>
                <fullName>Cajero</fullName>
            </value>
            <value>
                <fullName>Cajero ATM NOW</fullName>
                <isActive>false</isActive>
                <label>Cajero ATM NOW</label>
            </value>
            <value>
                <fullName>App BrokerNow</fullName>
                <label>OCEAN Broker</label>
            </value>
            <value>
                <fullName>Oficina</fullName>
            </value>
            <value>
                <fullName>Otras App</fullName>
                <isActive>false</isActive>
                <label>Otras App</label>
            </value>
            <value>
                <fullName>Plataforma virtual</fullName>
                <isActive>false</isActive>
                <label>Plataforma virtual</label>
            </value>
            <value>
                <fullName>Portal CBK</fullName>
                <isActive>false</isActive>
                <label>Portal CBK</label>
            </value>
            <value>
                <fullName>Portal Wivai</fullName>
                <label>Portal Facilitea</label>
            </value>
            <value>
                <fullName>RRSS</fullName>
            </value>
            <value>
                <fullName>Servicios Centrales</fullName>
                <isActive>false</isActive>
                <label>Servicios Centrales</label>
            </value>
            <value>
                <fullName>Sin canal</fullName>
            </value>
            <value>
                <fullName>SmartPhone</fullName>
                <isActive>false</isActive>
                <label>SmartPhone</label>
            </value>
            <value>
                <fullName>Web CBKNow</fullName>
            </value>
            <value>
                <fullName>Web Imagin</fullName>
                <isActive>false</isActive>
                <label>Web Imagin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>