force-app/main/default/objects/Case/fields/CC_Canal_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_Resolucion__c</fullName>
    <label>Canal de resolución</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CC_Canal_Procedencia__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CC_Canal_Procedencia</valueSetName>
    </valueSet>
</CustomField>