force-app/main/default/objects/Case/fields/CC_Canal_Respuesta__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_Respuesta__c</fullName>
    <label>Canal de respuesta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Comentarios Apps</fullName>
            </value>
            <value>
                <fullName>Carta</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
                <label>Teléfono</label>
            </value>
            <value>
                <fullName>SAC_Formulario</fullName>
                <label>Formulario web</label>
            </value>
            <value>
                <fullName>SAC_CartaPostal</fullName>
                <label>Carta postal</label>
            </value>
            <value>
                <fullName>SAC_FormularioOficina</fullName>
                <label>Formulario oficina</label>
            </value>
            <value>
                <fullName>SAC_CXBNow</fullName>
                <label>CXB Now</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>