force-app/main/default/objects/Case/fields/CC_Canal_Respuesta_Modificar__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_Respuesta_Modificar__c</fullName>
    <label>Modificar canal respuesta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Comentarios APPs</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Carta</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
                <label>Teléfono</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>