force-app/main/default/objects/Case/fields/CC_CanalNotifCli__c.field-meta.xml
<CustomField>
    <fullName>CC_CanalNotifCli__c</fullName>
    <defaultValue>&quot;Email&quot;</defaultValue>
    <description>Canal para enviar la notificación de seguimiento al cliente</description>
    <inlineHelpText>Canal para enviar la notificación de seguimiento al cliente</inlineHelpText>
    <label>Canal notificación cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>