force-app/main/default/objects/Case/fields/CC_Cancelar_SmartScript__c.field-meta.xml
<CustomField>
    <fullName>CC_Cancelar_SmartScript__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelar Operativa</label>
    <type>Checkbox</type>
</CustomField>