force-app/main/default/objects/Case/fields/CC_Cantidad_Repeticiones__c.field-meta.xml
<CustomField>
    <fullName>CC_Cantidad_Repeticiones__c</fullName>
    <defaultValue>0</defaultValue>
    <description>El campo se crea para saber cuantas repeticiones genero el caso (US824850)</description>
    <label>Cantidad de repeticiones</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>