force-app/main/default/objects/Case/fields/CC_Caso_Origen__c.field-meta.xml
<CustomField>
    <fullName>CC_Caso_Origen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso origen</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Casos de seguimiento</relationshipLabel>
    <relationshipName>CC_Casos_Seguimiento</relationshipName>
    <type>Lookup</type>
</CustomField>