force-app/main/default/objects/Case/fields/CC_CasoRelacionado__c.field-meta.xml
<CustomField>
    <fullName>CC_CasoRelacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso relacionado</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Case.ContactId</field>
            <operation>equals</operation>
            <valueField>Case.ContactId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>