force-app/main/default/objects/Case/fields/CC_Catalogo_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Catalogo_Facturacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catálogo Facturación</label>
    <referenceTo>CBK_CatalogoFacturacion__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>