force-app/main/default/objects/Case/fields/CC_Causa__c.field-meta.xml
<CustomField>
    <fullName>CC_Causa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Causa (interno)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>