force-app/main/default/objects/Case/fields/CC_Cerrado_Operativa__c.field-meta.xml
<CustomField>
    <fullName>CC_Cerrado_Operativa__c</fullName>
    <description>Determina si el cierre del caso se ha hecho desde la operativa (de la pestaña del caso)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cerrado por operativa</label>
    <type>DateTime</type>
</CustomField>