force-app/main/default/objects/Case/fields/CC_CierreAutomaticoCSBD__c.field-meta.xml
<CustomField>
    <fullName>CC_CierreAutomaticoCSBD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cierre automatico CSBD</label>
    <type>Checkbox</type>
</CustomField>