force-app/main/default/objects/Case/fields/CC_Codigo_Externo_Motivo__c.field-meta.xml
<CustomField>
    <fullName>CC_Codigo_Externo_Motivo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código externo motivo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>