force-app/main/default/objects/Case/fields/CC_Cola_Procedencia__c.field-meta.xml
<CustomField>
    <fullName>CC_Cola_Procedencia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cola de Procedencia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>