force-app/main/default/objects/Case/fields/CC_Comunicacion_Informativa__c.field-meta.xml
<CustomField>
    <fullName>CC_Comunicacion_Informativa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agrupador de tipo &quot;Comunicación Informativa&quot; asociado al caso.</description>
    <label>Comunicación informativa</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>CC_Agrupador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Comunicación Informativa</value>
        </filterItems>
        <filterItems>
            <field>CC_Agrupador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Comunicación Informativa de Marca</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CC_Agrupador__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>CC_Casos_Comunicacion_Informativa</relationshipName>
    <type>Lookup</type>
</CustomField>