force-app/main/default/objects/Case/fields/CC_Contacto_Intermedio__c.field-meta.xml
<CustomField>
    <fullName>CC_Contacto_Intermedio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check que nos indica que no se ha podido realizar el contacto intermedio y así nos aparezca en la vista de Contactos Intermedios</description>
    <label>Contacto Intermedio</label>
    <type>Checkbox</type>
</CustomField>