force-app/main/default/objects/Case/fields/CC_Contador_Pendientes__c.field-meta.xml
<CustomField>
    <fullName>CC_Contador_Pendientes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contador estados pendiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>