force-app/main/default/objects/Case/fields/CC_Control_ComApps__c.field-meta.xml
<CustomField>
    <fullName>CC_Control_ComApps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que nos indica que son casos de comentarios de 4 y 5 estrellas de Google, que no tienen que aparecer en la Lista de casos a tratar y no deben contar para el SLA.</description>
    <label>Control Comentarios App (interno)</label>
    <type>Checkbox</type>
</CustomField>