force-app/main/default/objects/Case/fields/CC_Conversacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Conversacion__c</fullName>
    <description>Conversación mantenida con el cliente</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Conversación mantenida con el cliente</inlineHelpText>
    <label>Conversación</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>