force-app/main/default/objects/Case/fields/CC_Correo_Asignacion_Enviado__c.field-meta.xml
<CustomField>
    <fullName>CC_Correo_Asignacion_Enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correo de asignación enviado</label>
    <type>Checkbox</type>
</CustomField>