force-app/main/default/objects/Case/fields/CC_CuentaRRSS_CBK__c.field-meta.xml
<CustomField>
    <fullName>CC_CuentaRRSS_CBK__c</fullName>
    <description>Cuenta RRSS desde la que se origina el caso</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Cuenta RRSS desde la que se origina el caso</inlineHelpText>
    <label>Cuenta RRSS CBK</label>
    <length>80</length>
    <type>Text</type>
</CustomField>