force-app/main/default/objects/Case/fields/CC_DAN__c.field-meta.xml
<CustomField>
    <fullName>CC_DAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DAN</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (DAN)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>