force-app/main/default/objects/Case/fields/CC_Derivar__c.field-meta.xml
<CustomField>
    <fullName>CC_Derivar__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo para saber si está en la operativa de derivar</description>
    <label>Derivar</label>
    <type>Checkbox</type>
</CustomField>