force-app/main/default/objects/Case/fields/CC_Descripcion_Problematica__c.field-meta.xml
<CustomField>
    <fullName>CC_Descripcion_Problematica__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción problemática</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>