force-app/main/default/objects/Case/fields/CC_Detalles_Solucion__c.field-meta.xml
<CustomField>
    <fullName>CC_Detalles_Solucion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detalles solución</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>