force-app/main/default/objects/Case/fields/CC_DevolucionCSBD__c.field-meta.xml
<CustomField>
    <fullName>CC_DevolucionCSBD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo reutilizado para el ámbito tareas de Documentación.</description>
    <label>Documentación</label>
    <type>Checkbox</type>
</CustomField>