force-app/main/default/objects/Case/fields/CC_DG__c.field-meta.xml
<CustomField>
    <fullName>CC_DG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegación General</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Delegación General)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>