force-app/main/default/objects/Case/fields/CC_Digitos_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>CC_Digitos_Tarjeta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dígitos Tarjeta</label>
    <length>25</length>
    <type>Text</type>
</CustomField>