force-app/main/default/objects/Case/fields/CC_DigitosTarjeta_Encriptado__c.field-meta.xml
<CustomField>
    <fullName>CC_DigitosTarjeta_Encriptado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar que se ha encriptado los digitos de la tarjeta.</description>
    <label>Digitos Tarjeta Encriptado</label>
    <type>Checkbox</type>
</CustomField>