force-app/main/default/objects/Case/fields/CC_Direccion_Territorial__c.field-meta.xml
<CustomField>
    <fullName>CC_Direccion_Territorial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dirección Territorial del caso</description>
    <label>Dirección Territorial</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Dirección Territorial)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>