force-app/main/default/objects/Case/fields/CC_Email_Cabecera__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Cabecera__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Cabecera</label>
    <length>250</length>
    <type>Text</type>
</CustomField>