force-app/main/default/objects/Case/fields/CC_En_Tercer_Nivel__c.field-meta.xml
<CustomField>
    <fullName>CC_En_Tercer_Nivel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En Tercer Nivel</label>
    <type>Checkbox</type>
</CustomField>