force-app/main/default/objects/Case/fields/CC_Error_TF7__c.field-meta.xml
<CustomField>
    <fullName>CC_Error_TF7__c</fullName>
    <description>Error de Terminal Financiero</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error TF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>