force-app/main/default/objects/Case/fields/CC_ErrorCreacionOportunidad__c.field-meta.xml
<CustomField>
    <fullName>CC_ErrorCreacionOportunidad__c</fullName>
    <description>Campo utilizado para devolver un error al crear la oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Creación Oportunidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>