force-app/main/default/objects/Case/fields/CC_EstadoSLA__c.field-meta.xml
<CustomField>
    <fullName>CC_EstadoSLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estado SLA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>