force-app/main/default/objects/Case/fields/CC_Facturado__c.field-meta.xml
<CustomField>
    <fullName>CC_Facturado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Siendo un caso facturable, indica si ya ha sido facturado</description>
    <label>Facturado</label>
    <type>Checkbox</type>
</CustomField>