force-app/main/default/objects/Case/fields/CC_FAQ_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_FAQ_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id FAQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>