force-app/main/default/objects/Case/fields/CC_Fecha_1a_Respuesta_Twitter__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_1a_Respuesta_Twitter__c</fullName>
    <description>Fecha de respuesta del Twitter</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Respuesta Twitter</label>
    <type>DateTime</type>
</CustomField>