force-app/main/default/objects/Case/fields/CC_Fecha_Activo_Formulario__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Activo_Formulario__c</fullName>
    <description>Fecha en la que tras un traslado colaborador, 3N, incidencia, vuelve el caso a Activo y comienza el SLA de respuesta para el Formulario.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Activo Formulario</label>
    <type>DateTime</type>
</CustomField>