force-app/main/default/objects/Case/fields/CC_Fecha_Cierre_SolInf__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Cierre_SolInf__c</fullName>
    <description>Fecha en la que está previsto el cierre automático del caso tras una solicitud de información en la que no han respondido on time.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Cierre Sol. Inf.</label>
    <type>DateTime</type>
</CustomField>