force-app/main/default/objects/Case/fields/CC_Fecha_Hora_Procesado__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Hora_Procesado__c</fullName>
    <description>Fecha/Hora del envío de la solicitud de reversión de ImaginBank.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha/Hora procesado</label>
    <type>DateTime</type>
</CustomField>