force-app/main/default/objects/Case/fields/CC_Fecha_Implantacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Implantacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Implantación</label>
    <type>Date</type>
</CustomField>