force-app/main/default/objects/Case/fields/CC_Fecha_Reapertura__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Reapertura__c</fullName>
    <description>Fecha de re-apertura del caso</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Reapertura</label>
    <type>DateTime</type>
</CustomField>