force-app/main/default/objects/Case/fields/CC_Fecha_Respuesta_Stores__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Respuesta_Stores__c</fullName>
    <description>Fecha en la que se da una respuesta al comentario de la Store.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Respuesta Stores</label>
    <type>DateTime</type>
</CustomField>