force-app/main/default/objects/Case/fields/CC_Fecha_Solicitud_Informacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Solicitud_Informacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Solicitud de Información</label>
    <type>Date</type>
</CustomField>