force-app/main/default/objects/Case/fields/CC_Fecha_Traslado_1N__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Traslado_1N__c</fullName>
    <description>Campo que se utiliza para almacenar el ultimo traslado/creación del caso en 1N</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Traslado 1N</label>
    <type>DateTime</type>
</CustomField>